* Implemented Complete Compare fuctionality
* A backup of the original MXM file is now made for security reasons

Release 1.2.1

* Several bug fixes preventing the complete compare to work in some
  conditions
  
Release 1.2.2

* Bug Fixing 1899736 [ERDesignerNG] English should be default locale
* Bug Fixing 1891226 [ERDesignerNG] Scale not defaults to 10
* Bug Fixing 1891017 [ERDesignerNG] UI hangs if re throws exception
* Bug Fixing 1890979 [ERDesignerNG] Complete compare fails sometimes
* Bug Fixing 1899732 [ERDesignerNG] Fails to reverse engineer oracle columns

Release 1.3

* Implemented FR 1899729 [ERDesignerNG] Table selection for reverse engineer
* Implemented FR 1905362 [ERDesignerNG] Reuse current model during reverse enginer
* Implemented FR 1903318 [ERDesignerNG] Add support for subject areas
* Bug Fixing 1912834 [ERDesignerNG] RE Table selection fails
* Bug Fixing 1912838 [ERDesignerNG] Dropping a table should drop the constraints

Release 1.4

* Bug Fixing 1934764 [ERDesignerNG] Table name length limitation for MySQL wrong
* Bug Fixing 1934765 [ERDesignerNG] DataType DECIMAL UNSIGNED fails in MySQL
* Bug Fixing 1958824 [ERDesignerNG] entity comment not saved
* Bug Fixing 1968870 [ERDesignerNG] Complete compare fails on attributes
* Bug Fixing 1969689 [ERDesignerNG] Reverse engineer pk fails on DB2
* Bug Fixing 1970375 [ERDesignerNG] Reverse engineer fk fails on DB2
* Fixed some spelling mistakes
* Implemented FR 1950583 [ERDesignerNG] Save connection parameters
* Implemented FR 1938750 [ERDesignerNG] Show comments in editing area
* Implemented FR 1973045 [ERDesignerNG] Add grid view to editor

Release 1.5

* Working on comments in editor
* Implemented FR 1958830 [ERDesignerNG] notes/text on diagram
* Bug Fixing 1977581 [ERDesignerNG] grid related minor issues
* Bug Fixing 1978355 [ERDesignerNG] string default values on MySQL
* Bug Fixing 2070251 [ERDesignerNG] Lack of primary key causes exception